--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: simple_fontellico_progress_dialog
-description: A simple progress dialog with custom icons.
-version: 0.0.1
+description: This package helps you to render a progress dialog with different types of loading indicator.
+version: 0.1.0
 homepage: https://github.com/ajomuch92/simple-fontelico-progress-dialog-flutter
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
